syntax = "proto3";

package blog;

option go_package = "blog/blogpb";


message Blog{
    string id=1;
    string author_id =2;
    string title=3;
    string content=4;
}

service BlogService{
    rpc CreateBlog(CreateBlogRequest) returns (CreateBlogResponse){};
    //returns NOT_FOUND if item is not found
    rpc ReadBlog(ReadBlogRequest) returns (ReadBlogResponse){}; 
}

message CreateBlogRequest{
    Blog blog = 1;
}

message CreateBlogResponse{
    Blog blog = 1; //will have the blog_id generated
}

message ReadBlogRequest{
    string blog_id =1;
}

message ReadBlogResponse{
    Blog blog=1;
}